Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  Some future release (Zope X3 3.1.0)

    New features

      - Add content_factory_id attribute to the addform and addwizard
        directive so that named factories can be invoked too.

      - Add locate attribute to the adapter directive in order to ensure
        location for security proxied objects. An explicite locate should be
        if complex adapter security declarations within an additional class
        directive are used.

      - The http() function exposed to functional doctests how accepts
        an optional "form" argument to use as the set of form values.
        This works for any type of request; this can used to make
        functional doctests involving form submissions much easier to
        read and maintain.  It's also convenient when some of the form
        values are computed.

      - Implemented proper HTTP 405 Method Not Allowed handling in the
        HTTP publication if a requested method does not have a corresponding
        view.

      - Implemented a generic user preferences system.

        * User preferences are combined in groups that are described by
          schemas.

        * One can create a tree of preference groups using Python's dot
          notation in the group ids.

        * Preference groups can be declared to act as categories, which is
          used by the UI to improve the organization of the preferences.

        * Using a default preference provider, the site administrator can
          customize the default settings of the preferences for a user on a
          site wide bases. Acquisition in multi-site pages is supported.

        * The preferences are very easily accessible in TALES via a traversal
          namespace::

            /++preferences++/zmi/folder/sortedby
